Crash in rna_EffectorWeight_path when object has fluid and dynamic paint modifiers #82729

Closed
opened 2020-11-14 23:46:08 +01:00 by Pablo Ezequiel Padula · 9 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30

Blender Version
Broken: version: 2.90.0, branch: master, commit date: 2020-08-31 11:26, hash: 0330d1af29
Worked: 2.81 (before mantaflow)

Short description of error
Blender closes when trying to display "Weights" in Dynamic Paint.

Exact steps for others to reproduce the error
#82729.blend

  • Open file
  • in Dynamic Paint settings > Effects > Drip expand weights panel

Crash in rna_EffectorWeight_path() on null deref fmd->domain->effector_weights

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30 **Blender Version** Broken: version: 2.90.0, branch: master, commit date: 2020-08-31 11:26, hash: `0330d1af29` Worked: 2.81 (before mantaflow) **Short description of error** Blender closes when trying to display "Weights" in Dynamic Paint. **Exact steps for others to reproduce the error** [#82729.blend](https://archive.blender.org/developer/F9366863/T82729.blend) - Open file - in Dynamic Paint settings > Effects > Drip expand weights panel Crash in `rna_EffectorWeight_path()` on null deref `fmd->domain->effector_weights`

Added subscriber: @pablodefou

Added subscriber: @pablodefou

Added subscriber: @nacioss

Added subscriber: @nacioss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can reproduce the issue in 2.91 too.

I can reproduce the issue in 2.91 too.

Added subscriber: @iss

Added subscriber: @iss

@nacioss Thanks for checking, but please follow this process in future: https://wiki.blender.org/wiki/Process/Bug_Reports/Triaging_Playbook

@nacioss Thanks for checking, but please follow this process in future: https://wiki.blender.org/wiki/Process/Bug_Reports/Triaging_Playbook
Richard Antalik changed title from Crashes by activating "Weights" in Dynamic Painting. to Crash in rna_EffectorWeight_path when object has fluid and dynamic paint modifiers 2020-11-24 19:49:04 +01:00
Philipp Oeser self-assigned this 2020-11-24 21:50:07 +01:00

This issue was referenced by a08a08cb4c

This issue was referenced by a08a08cb4c26627c05ad6089030223e8313a0073

This issue was referenced by 4b248c1658

This issue was referenced by 4b248c16589b1cdf12b82f74a4ac32e29b6b10f4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82729
There is no content yet.